[package]
name = "mmoss-examples-lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
mmoss = { path = "../mmoss"}
mmoss-proc-macros = { path = "../mmoss-proc-macros"}
mmoss-ffi = { path = "../mmoss-ffi", optional = true}
anyhow.workspace = true
bincode.workspace = true
bevy = { workspace = true, features = ["std"]}
bevy-trait-query.workspace = true
sdl2.workspace = true
static_cell.workspace = true
env_logger.workspace = true
rand.workspace = true
async-trait.workspace = true
log.workspace = true

[features]
default = ["ffi"]
ffi = ["dep:mmoss-ffi"]