[package]
name = "mmoss-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
mmoss = { path = "../mmoss"}
mmoss-proc-macros = { path = "../mmoss-proc-macros"}
mmoss-examples-lib = { path = "../mmoss-examples-lib"}
mmoss-middleware-physx = { path = "../mmoss-middleware-physx" }
bevy-trait-query.workspace = true
anyhow.workspace = true
bincode.workspace = true
bevy = { workspace = true, features = ["std"]}
sdl2.workspace = true
static_cell.workspace = true
env_logger.workspace = true
rand.workspace = true
tokio.workspace = true
log.workspace = true
physx = "0.19.0"