[package]
name = "mmoss"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
bincode.workspace = true
bevy = { workspace = true, features = ["std"]}
bevy-trait-query.workspace = true
log.workspace = true
mmoss-proc-macros = { path = "../mmoss-proc-macros"}

[dev-dependencies]
sdl2.workspace = true
mmoss-examples-lib = {path = "../mmoss-examples-lib"}
static_cell.workspace = true
env_logger.workspace = true
rand.workspace = true